# computer-graphics-course

./: .gitignore  CMakeLists.txt  README.md
course-work/: main.cpp  main_original.cpp
lab1/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
lab2/: main.cpp
lab3/: main.cpp
lab3-ripple/: main.cpp
lab3-ripple/shaders/: shader.vert
